--- a/100_Numpy_exercises.ipynb
+++ b/100_Numpy_exercises.ipynb
@@ -2161,12 +2161,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "id": "4b482822",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 3 46]\n",
+      " [92 23]\n",
+      " [15 46]\n",
+      " [94 40]\n",
+      " [83 10]\n",
+      " [24 95]\n",
+      " [ 9 25]\n",
+      " [33  6]\n",
+      " [91 73]\n",
+      " [45 19]]\n",
+      "[[  0.          91.92388155  12.          91.19758769  87.7268488\n",
+      "   53.31041174  21.84032967  50.          92.04890005  49.92995093]\n",
+      " [ 91.92388155   0.          80.36168241  17.11724277  15.8113883\n",
+      "   99.03534723  83.02409289  61.40032573  50.009999    47.16990566]\n",
+      " [ 12.          80.36168241   0.          79.22752047  76.94153625\n",
+      "   49.81967483  21.84032967  43.8634244   80.65358021  40.36087214]\n",
+      " [ 91.19758769  17.11724277  79.22752047   0.          31.95309062\n",
+      "   89.02246907  86.31338251  69.83552105  33.13608305  53.31041174]\n",
+      " [ 87.7268488   15.8113883   76.94153625  31.95309062   0.\n",
+      "  103.46980236  75.50496672  50.15974482  63.50590524  39.05124838]\n",
+      " [ 53.31041174  99.03534723  49.81967483  89.02246907 103.46980236\n",
+      "    0.          71.58910532  89.45389874  70.51950085  78.84795495]\n",
+      " [ 21.84032967  83.02409289  21.84032967  86.31338251  75.50496672\n",
+      "   71.58910532   0.          30.61045573  95.01578816  36.49657518]\n",
+      " [ 50.          61.40032573  43.8634244   69.83552105  50.15974482\n",
+      "   89.45389874  30.61045573   0.          88.6171541   17.69180601]\n",
+      " [ 92.04890005  50.009999    80.65358021  33.13608305  63.50590524\n",
+      "   70.51950085  95.01578816  88.6171541    0.          70.9365914 ]\n",
+      " [ 49.92995093  47.16990566  40.36087214  53.31041174  39.05124838\n",
+      "   78.84795495  36.49657518  17.69180601  70.9365914    0.        ]]\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np\n"
+    "import numpy as np\n",
+    "points = np.random.randint(0,100,(10,2))\n",
+    "#print(points)\n",
+    "\n",
+    "l = np.atleast_2d(points[:,0])\n",
+    "r = np.atleast_2d(points[:,1])\n",
+    "\n",
+    "d = np.sqrt((l-l.T)**2 + (r-r.T)**2)\n",
+    "\n",
+    "print(points)\n",
+    "print(d)\n",
+    "\n"
    ]
   },
   {
@@ -2179,11 +2227,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "id": "5db64b6d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 1. 2. 3. 4. 5. 6. 7. 8. 9.]\n",
+      "[0 1 2 3 4 5 6 7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "x = np.arange(10, dtype=np.float32)\n",
+    "y = x.astype(np.int32,copy=False)\n",
+    "print(x)\n",
+    "print(y)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2204,7 +2268,9 @@
    "id": "8af4f753",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#np.genfromtxt('file.txt',delimiter=',')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2216,11 +2282,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "id": "64795f84",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 8 2]\n",
+      " [1 7 0]\n",
+      " [2 6 8]\n",
+      " [4 4 1]\n",
+      " [8 4 4]]\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'ndenumerate' object has no attribute 'tostring'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_1035/3698700127.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndenumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtostring\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndenumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'ndenumerate' object has no attribute 'tostring'"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "x = np.random.randint(0,9,(5,3))\n",
+    "print(x)\n",
+    "for index, value in np.ndenumerate(x):\n",
+    "    print(index, value)\n",
+    "\n",
+    "# np.info(np.ndenumerate)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2232,11 +2331,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 207,
    "id": "42e3a5bc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.36787944 0.50661699 0.59452055 0.59452055 0.50661699 0.36787944]\n",
+      " [0.50661699 0.69767633 0.81873075 0.81873075 0.69767633 0.50661699]\n",
+      " [0.59452055 0.81873075 0.96078944 0.96078944 0.81873075 0.59452055]\n",
+      " [0.59452055 0.81873075 0.96078944 0.96078944 0.81873075 0.59452055]\n",
+      " [0.50661699 0.69767633 0.81873075 0.81873075 0.69767633 0.50661699]\n",
+      " [0.36787944 0.50661699 0.59452055 0.59452055 0.50661699 0.36787944]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "x, y = np.meshgrid(np.linspace(-1,1,6), np.linspace(-1,1,6))\n",
+    "D = np.sqrt(x**2+y**2)\n",
+    "\n",
+    "\n",
+    "sigma, mu = 1.0, 0.0\n",
+    "G = np.exp(-( (D-mu)**2 / ( 2.0 * sigma**2 ) ) )\n",
+    "print(G)\n"
+   ]
   },
   {
    "cell_type": "markdown",
